# ADLDetection

./: README.md  loader.py  main.py  preprocessing.py  pyproject.toml
detic_evaluation/: evaluation.py  preprocessing.py
paper/: generic-color.tex  generic.sty  main.tex  refs.bib
