[project]
name = "adl-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-coco-eval>=1.6.5",
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "pycocotools>=2.0.8",
    "torch>=2.6.0",
    "torchmetrics>=1.7.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
